--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "loaders.css": "^0.1.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.0",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.51.0",
     "serve": "^13.0.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,7 +38,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
-    },
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
